# comp-graphics

3d_primitives/: main.cpp
cuba/: CMakeLists.txt  main.cpp
house/: CMakeLists.txt  main.cpp
light/: CMakeLists.txt  main.cpp
material/: CMakeLists.txt  main.cpp
